Incorporación de notificacion de acuerdo / sentencia de secj php a secj java