@@ -2,6 +2,7 @@ package mx.gob.pjpuebla.trials.litigante;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import mx.gob.pjpuebla.migracion.readers.usuario.UsuarioMigracionRepository;
 import mx.gob.pjpuebla.trials.core.materias.Materia;
 import mx.gob.pjpuebla.trials.core.materias.MateriaRepository;
 import mx.gob.pjpuebla.trials.core.tipopartes.TipoPartesRecord;
@@ -37,6 +38,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -55,6 +57,7 @@ public class LitiganteService {
     private final CarpetaRepository carpetaRepository;
     private final MovimientoService movimientoService;
     private final MateriaRepository materiaRepository;
+    private final UsuarioMigracionRepository usuarioMigracionRepository;
 
     private final DateTimeFormatter formatoFecha = DateTimeFormatter.ofPattern("yyyy-MM-dd");
     private final DateTimeFormatter formatoTiempo = DateTimeFormatter.ofPattern("HH:mm:ss");
@@ -99,9 +102,14 @@ public class LitiganteService {
                         notification.getNotificacion().getFechaNotificado(),
                         notification.getNotificacion().getDocumento().getCarpeta().getJuzgado().getNombre(),
                         notification.getNotificacion().getDocumento().getId(),
-                        StringUtils.capitalize(notification.getNotificacion().getEstadoNotificacion().name().replace("_", " ").toLowerCase())
-                ))
-                .toList();
+                        StringUtils.capitalize(notification.getNotificacion().getEstadoNotificacion().name()
+                                .replace("_", " ").toLowerCase())))
+                .collect(Collectors.toList());
+
+        // Se incorpora notificaciones de expedientes del sistema SECJ PHP:
+        List<AcuerdoSentenciaRecord> listNotiSecjPhp = usuarioMigracionRepository.notificacionesLitigante(userName);
+        list.addAll(Optional.ofNullable(listNotiSecjPhp).orElse(Collections.emptyList()));
+        // FIn incorporación.
 
         for (NotificacionesDetalles item : page.getContent()) {
             if (item.getNotificacion().getEstadoNotificacion().equals(EstadoNotificacion.POR_LEER)) {
@@ -158,7 +166,7 @@ public class LitiganteService {
 
     private static String[] separarFechaYHora(String fechaHora) {
         String[] partes = fechaHora.split("T");
-        return partes.length == 2 ? partes : new String[]{"", ""};
+        return partes.length == 2 ? partes : new String[] { "", "" };
     }
 
     public Page<DocumentoResponseRecord> getExpedienteDetails(Integer carpetaId, Pageable pageable) {
@@ -180,7 +188,7 @@ public class LitiganteService {
     public Page<PromocionesLitiganteRecord> getPromocionesLitigante(String key, Pageable pageable) {
         String userName = getLitiganteUsername();
         Page<Documento> docPromociones = documentoRepository.findPromocionesLitigante(userName, key, pageable);
-        //TODO revisar paginador
+        // TODO revisar paginador
         return docPromociones.map(documento -> {
             String[] partesExpediente = documento.getCarpeta().getExpediente().split("/");
             String numeroExpediente = partesExpediente[0];
@@ -205,12 +213,14 @@ public class LitiganteService {
                 .orElseThrow(() -> new NotFoundException("Promoción no encontrada", promocionId.toString()));
         DocumentoContenido contenido = documentoContenidoRepository.findByDocumentoId(promocionId)
                 .orElseThrow(() -> new NotFoundException("Documento no encontrada", promocionId.toString()));
-        return new DocumentoPromocionRecord(promocion.getCarpeta().getId(), TipoPromocion.CORREO_ELECTRONICO, null, contenido.getTexto());
+        return new DocumentoPromocionRecord(promocion.getCarpeta().getId(), TipoPromocion.CORREO_ELECTRONICO, null,
+                contenido.getTexto());
     }
 
     public Page<LibroGobiernoRecord> getConsultaLibroGobierno(
             String nombre, String aPaterno, String aMaterno, Pageable pageable) {
-        return personaDocumentoRepository.findByNombreCompleto(nombre.trim(), aPaterno.trim(), aMaterno.trim(), pageable);
+        return personaDocumentoRepository.findByNombreCompleto(nombre.trim(), aPaterno.trim(), aMaterno.trim(),
+                pageable);
     }
 
     public Page<SentenciasPublicasRecord> getSentenciasPublicas(
